fix cancel button behind title pop-up

--- a/client/src/app/styles/dialogs.scss
+++ b/client/src/app/styles/dialogs.scss
@@ -1,11 +1,11 @@
 @import './colors.scss';
 
 .container{
-    align-items: center;
+    text-align: center;
 }
 
 .icon-cancel {
-    font-size: 20px;
+    font-size: 23px;
 }
 
 .requirement {
@@ -49,6 +49,7 @@
 }
 
 .success{
+    font-family: Signika Negative;
     width: 80%;
     height: 7.5vh;
     font-size: 30px;
@@ -82,12 +83,17 @@
 .input-area{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 30vw;
+    align-items: flex-start;
+    width: 22vw;
 }
 
 .toolbar {
     display: flex;
     justify-content: center;
+}
+
+.mat-card-header{
+    display: flex;
+    flex-direction: column;
 }
 
